# python-fastapi-admin

./: .gitignore  OBSERVABILITY.md  README.md  init.sql  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/private/: menu.py  permission.py  role.py  user.py
app/api/public/: user.py
app/core/: config.py  context.py  logging.py  metrics.py  redis.py  security.py  tracing.py
app/db/: base.py  filters.py  session.py
app/exceptions/: codes.py  handlers.py
app/mappers/: menu_mapper.py  permission_mapper.py  role_mapper.py  user_mapper.py
app/middlewares/: logging.py  metrics.py  trace.py
app/models/: rbac.py
app/repositorys/: menu_repo.py  permission_repo.py  role_repo.py  user_repo.py
app/schemas/: menu.py  permission.py  response.py  role.py  user.py
app/services/: __init__.py  menu_service.py  permission_service.py  role_service.py  user_service.py
app/utils/: redis_cache.py
config/: config.toml
migrations/: env.py
migrations/versions/: f740f5b93312_init_tables.py
tests/core/: test_core_logging.py  test_core_metrics.py  test_core_redis.py  test_core_security.py  test_core_tracing.py
tests/db/: test_db_base.py  test_db_filters.py  test_db_session.py
tests/exceptions/: test_business_exceptions.py  test_handlers.py
tests/middlewares/: test_logging_middleware.py  test_metrics_middleware.py  test_trace_middleware.py
